kubernetes/applications/media/manifests/qbittorrent/qbittorrent-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qbittorrent-deployment
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: qbittorrent
  template:
    metadata:
      labels:
        app: qbittorrent
    spec:
      containers:
        - name: qbittorrent
          image: linuxserver/qbittorrent:5.1.2
          volumeMounts:
            - name: config
              mountPath: /config
            - name: downloads
              mountPath: /downloads
            - name: run
              mountPath: /run
          ports:
            - name: qb-web-ui
              containerPort: 8080
              protocol: TCP
          securityContext:
            runAsNonRoot: true
            seccompProfile:
              type: RuntimeDefault
            runAsUser: 1000
            runAsGroup: 1000
            readOnlyRootFilesystem: true
        - name: vpn
          image: qmcgaw/gluetun:v3.40.0
          securityContext:
            capabilities:
              add:
                - NET_ADMIN
          volumeMounts:
            - mountPath: /gluetun/wireguard/
              name: wgconfig
              readOnly: true
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: qbittorrent-config-pvc
        - name: downloads
          persistentVolumeClaim:
            claimName: downloads-pvc
        - name: wgconfig
          emptyDir: {}
        - name: run
          emptyDir: {}
